# NuGridPy3

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
nugridpy/: astronomy.py
tests/: test_astronomy.py  test_constants.py
