[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NuGridPy3"
version = "0.8.0"
description = "Modernized Python tools for NuGrid nuclear astrophysics analysis"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "NuGrid Team", email = "fherwig@uvic.ca" },
]
maintainers = [
    { name = "Shane Gervais" },
]
keywords = [
    "astronomy",
    "astrophysics",
    "nuclear astrophysics",
    "NuGrid",
    "visualization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: IPython",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "future>=0.18",
    "h5py>=3.8",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "scipy>=1.10",
    "xlrd>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]
docs = [
    "sphinx>=7",
    "sphinx-bootstrap-theme>=0.8",
]

[project.urls]
Homepage = "https://github.com/ShaneGervais/NuGridPy3"
Repository = "https://github.com/ShaneGervais/NuGridPy3"
Original = "https://nugrid.github.io/NuGridPy"

[tool.setuptools.packages.find]
include = ["nugridpy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
